some french changed to english, and comments added
- paths should be using environment variables
- IMO we shouldn't resize the images, but rather add layers (else we waste the resolution, plus our input won't be square!)

--- a/DL4CV_project.ipynb
+++ b/DL4CV_project.ipynb
@@ -151,13 +151,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The pre-traitement of the images contains the following steps:\n",
+    "### The pre-training of the images contains the following steps:\n",
     "\n",
     "--Using transform.Scale to rize the images into width = 256 (To be modified)\n",
     "\n",
     "--take the center part with 224 x 224 (We know that the resnet requires an input of 224 x 224)\n",
     "\n",
-    "--transforme each pixel from [0,255] to [0,1] \n",
+    "--transforms each pixel from [0,255] to [0,1] \n",
+    "--> Are we sure we want to do this? Won't we lose resolution? \n",
     "\n",
     "--Normalisation for resnet"
    ]
@@ -177,6 +178,7 @@
     "#     transforms.Lambda(lambda x: Normal(x))])\n",
     "     transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225))])\n",
     "datatrain = ImageFolder(root='/local/zhu/Stage Yue code/exp2/train90', transform=transform, target_transform=labeltransformtrain)\n",
+    "# paths need to be changed ... best to use environment variables (ie. DL4CV_ROOT)\n",
     "datavalidation = ImageFolder(root='/local/zhu/Stage Yue code/exp2/validation10', transform=transform, target_transform=labeltransformvalidation)\n",
     "datatest = ImageFolder(root='/local/zhu/Stage Yue code/exp2/test', transform=transform, target_transform=labeltransformtest)"
    ]
@@ -306,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We take a pretrained model if it exist."
+    "We take a pretrained model if it exists."
    ]
   },
   {
@@ -352,7 +354,7 @@
    },
    "outputs": [],
    "source": [
-    "print(\"The first seuil is defined at \", seuil)\n",
+    "print(\"The first threshold is defined at \", seuil)\n",
     "newseuil=torch.Tensor(numlabels)\n",
     "\n",
     "ConfusionMatrixTrain=[torch.Tensor() for i in range(numlabels)]\n",
