--- a/DL4CV_project.ipynb
+++ b/DL4CV_project.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file is the main notebook (temporary just a structure now of all steps that we can do) for our DL4CV project. Our aim is to detect the object in the street with a convolutional neural network. The detection will be like a segmentation task with find out what each pixel of the object in a photo belongs to."
+    "This file is the main notebook (temporary just a structure now of all steps that we can do) for our DL4CV project. Our aim is to detect the object in the street by means of a convolutional neural network. The detection will be like a segmentation task with find out what each pixel of the object in a photo belongs to."
    ]
   },
   {
