--- a/DL4CV_project.ipynb
+++ b/DL4CV_project.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,8 +71,16 @@
     "import numpy as np\n",
     "import math\n",
     "import random\n",
-    "import torch.utils.model_zoo as model_zoo\n",
-    "import torch.utils.data.sampler as Sampler"
+    "import os\n",
+    "from PIL import Image\n",
+    "from torch.utils.data import Dataset\n",
+    "from MyFolder import MyImageFolder\n",
+    "#from cityscapesScripts.cityscapesscripts.helpers import labels\n",
+    "#from cityscapesScripts.cityscapesscripts.viewer.cityscapesViewer import CityscapesViewer\n",
+    "#from cityscapesScripts.cityscapesscripts.preparation.createTrainIdLabelImgs import \n",
+    "#from cityscapesScripts.cityscapesscripts.\n",
+    "#from cityscapesScripts.cityscapesscripts.\n",
+    "#from cityscapesScripts.cityscapesscripts."
    ]
   },
   {
@@ -102,13 +110,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "labelscsv = pd.read_csv(\"\")"
+    "labelscsv = pd.read_csv(\"../Downloads/labels.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(35, 10)\n",
+      "                    name  id  trainId      category  catId  hasInstances  \\\n",
+      "0              unlabeled   0      255          void      0         False   \n",
+      "1            ego vehicle   1      255          void      0         False   \n",
+      "2   rectification border   2      255          void      0         False   \n",
+      "3             out of roi   3      255          void      0         False   \n",
+      "4                 static   4      255          void      0         False   \n",
+      "5                dynamic   5      255          void      0         False   \n",
+      "6                 ground   6      255          void      0         False   \n",
+      "7                   road   7        0          flat      1         False   \n",
+      "8               sidewalk   8        1          flat      1         False   \n",
+      "9                parking   9      255          flat      1         False   \n",
+      "10            rail track  10      255          flat      1         False   \n",
+      "11              building  11        2  construction      2         False   \n",
+      "12                  wall  12        3  construction      2         False   \n",
+      "13                 fence  13        4  construction      2         False   \n",
+      "14            guard rail  14      255  construction      2         False   \n",
+      "15                bridge  15      255  construction      2         False   \n",
+      "16                tunnel  16      255  construction      2         False   \n",
+      "17                  pole  17        5        object      3         False   \n",
+      "18             polegroup  18      255        object      3         False   \n",
+      "19         traffic light  19        6        object      3         False   \n",
+      "20          traffic sign  20        7        object      3         False   \n",
+      "21            vegetation  21        8        nature      4         False   \n",
+      "22               terrain  22        9        nature      4         False   \n",
+      "23                   sky  23       10           sky      5         False   \n",
+      "24                person  24       11         human      6          True   \n",
+      "25                 rider  25       12         human      6          True   \n",
+      "26                   car  26       13       vehicle      7          True   \n",
+      "27                 truck  27       14       vehicle      7          True   \n",
+      "28                   bus  28       15       vehicle      7          True   \n",
+      "29               caravan  29      255       vehicle      7          True   \n",
+      "30               trailer  30      255       vehicle      7          True   \n",
+      "31                 train  31       16       vehicle      7          True   \n",
+      "32            motorcycle  32       17       vehicle      7          True   \n",
+      "33               bicycle  33       18       vehicle      7          True   \n",
+      "34         license plate  -1       -1       vehicle      7         False   \n",
+      "\n",
+      "    ignoreInEval  colorR  colorG  colorB  \n",
+      "0           True       0       0       0  \n",
+      "1           True       0       0       0  \n",
+      "2           True       0       0       0  \n",
+      "3           True       0       0       0  \n",
+      "4           True       0       0       0  \n",
+      "5           True     111      74       0  \n",
+      "6           True      81       0      81  \n",
+      "7          False     128      64     128  \n",
+      "8          False     244      35     232  \n",
+      "9           True     250     170     160  \n",
+      "10          True     230     150     140  \n",
+      "11         False      70      70      70  \n",
+      "12         False     102     102     156  \n",
+      "13         False     190     153     153  \n",
+      "14          True     180     165     180  \n",
+      "15          True     150     100     100  \n",
+      "16          True     150     120      90  \n",
+      "17         False     153     153     153  \n",
+      "18          True     153     153     153  \n",
+      "19         False     250     170      30  \n",
+      "20         False     220     220       0  \n",
+      "21         False     107     142      35  \n",
+      "22         False     152     251     152  \n",
+      "23         False      70     130     180  \n",
+      "24         False     220      20      60  \n",
+      "25         False     255       0       0  \n",
+      "26         False       0       0     142  \n",
+      "27         False       0       0      70  \n",
+      "28         False       0      60     100  \n",
+      "29          True       0       0      90  \n",
+      "30          True       0       0     110  \n",
+      "31         False       0      80     100  \n",
+      "32         False       0       0     230  \n",
+      "33         False     119      11      32  \n",
+      "34          True       0       0     142  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(labelscsv.shape)\n",
+    "print(labelscsv)"
    ]
   },
   {
@@ -137,14 +234,14 @@
    },
    "outputs": [],
    "source": [
-    "def labeltransformtrain(input):\n",
-    "    return(torch.Tensor.float(dictlabel[datatrain.classes[input]]))\n",
-    "\n",
-    "def labeltransformvalidation(input):\n",
-    "    return(torch.Tensor.float(dictlabel[datavalidation.classes[input]]))\n",
-    "\n",
-    "def labeltransformtest(input):\n",
-    "    return(torch.Tensor.float(dictlabel[datatest.classes[input]]))"
+    "def labeltransform(input):\n",
+    "    target=torch.IntTensor(2048, 1024).zero_()\n",
+    "    for i in range(2048):\n",
+    "        for j in range(1024):\n",
+    "            target[i][j]=255\n",
+    "            for k in range(labelscsv.shape[1])\n",
+    "    \n",
+    "    return(torch.Tensor.float(dictlabel[datatrain.classes[input]]))"
    ]
   },
   {
@@ -171,16 +268,30 @@
    },
    "outputs": [],
    "source": [
-    "transform = transforms.Compose(\n",
-    "    [transforms.Scale(256),\n",
-    "     transforms.CenterCrop(224),     \n",
-    "     transforms.ToTensor(),\n",
-    "#     transforms.Lambda(lambda x: Normal(x))])\n",
-    "     transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225))])\n",
-    "datatrain = ImageFolder(root='/local/zhu/Stage Yue code/exp2/train90', transform=transform, target_transform=labeltransformtrain)\n",
-    "# paths need to be changed ... best to use environment variables (ie. DL4CV_ROOT)\n",
-    "datavalidation = ImageFolder(root='/local/zhu/Stage Yue code/exp2/validation10', transform=transform, target_transform=labeltransformvalidation)\n",
-    "datatest = ImageFolder(root='/local/zhu/Stage Yue code/exp2/test', transform=transform, target_transform=labeltransformtest)"
+    "#transform = transforms.Compose(\n",
+    "#    [transforms.Scale(256),\n",
+    "#     transforms.CenterCrop(224),     \n",
+    "#     transforms.ToTensor(),\n",
+    "#     transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#transform = transforms.Compose(\n",
+    "#    [transforms.Scale(256),\n",
+    "#     transforms.CenterCrop(224),     \n",
+    "#     transforms.ToTensor(),\n",
+    "#     transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225))])\n",
+    "datatrain = MyImageFolder(root1='../Downloads/leftImg8bit/train', root2='../Downloads/gtFine/train' , transform = None , target_transform= labeltransform)\n",
+    "#datatrainlabel = MyImageFolder(root='../Downloads/gtFine/train', transform = None , target_transform= None)\n",
+    "\n",
+    "\n",
+    "#datavalidation = ImageFolder(root='/local/zhu/Stage Yue code/exp2/validation10', transform=transform, target_transform=labeltransformvalidation)\n",
+    "#datatest = ImageFolder(root='/local/zhu/Stage Yue code/exp2/test', transform=transform, target_transform=labeltransformtest)"
    ]
   },
   {
@@ -192,11 +303,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<PIL.Image.Image image mode=RGB size=2048x1024 at 0x7F66417E1FD0>\n",
+      "<PIL.Image.Image image mode=RGB size=2048x1024 at 0x7F66417AD588>\n"
+     ]
+    }
+   ],
    "source": [
     "x,y=datatrain[0]\n",
     "print(x)\n",
