--- a/DL4CV_project.ipynb
+++ b/DL4CV_project.ipynb
@@ -56,7 +56,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -110,8 +112,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "labelscsv = pd.read_csv(\"../Downloads/labels.csv\")"
@@ -119,129 +123,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(35, 10)\n",
-      "                    name  id  trainId      category  catId  hasInstances  \\\n",
-      "0              unlabeled   0      255          void      0         False   \n",
-      "1            ego vehicle   1      255          void      0         False   \n",
-      "2   rectification border   2      255          void      0         False   \n",
-      "3             out of roi   3      255          void      0         False   \n",
-      "4                 static   4      255          void      0         False   \n",
-      "5                dynamic   5      255          void      0         False   \n",
-      "6                 ground   6      255          void      0         False   \n",
-      "7                   road   7        0          flat      1         False   \n",
-      "8               sidewalk   8        1          flat      1         False   \n",
-      "9                parking   9      255          flat      1         False   \n",
-      "10            rail track  10      255          flat      1         False   \n",
-      "11              building  11        2  construction      2         False   \n",
-      "12                  wall  12        3  construction      2         False   \n",
-      "13                 fence  13        4  construction      2         False   \n",
-      "14            guard rail  14      255  construction      2         False   \n",
-      "15                bridge  15      255  construction      2         False   \n",
-      "16                tunnel  16      255  construction      2         False   \n",
-      "17                  pole  17        5        object      3         False   \n",
-      "18             polegroup  18      255        object      3         False   \n",
-      "19         traffic light  19        6        object      3         False   \n",
-      "20          traffic sign  20        7        object      3         False   \n",
-      "21            vegetation  21        8        nature      4         False   \n",
-      "22               terrain  22        9        nature      4         False   \n",
-      "23                   sky  23       10           sky      5         False   \n",
-      "24                person  24       11         human      6          True   \n",
-      "25                 rider  25       12         human      6          True   \n",
-      "26                   car  26       13       vehicle      7          True   \n",
-      "27                 truck  27       14       vehicle      7          True   \n",
-      "28                   bus  28       15       vehicle      7          True   \n",
-      "29               caravan  29      255       vehicle      7          True   \n",
-      "30               trailer  30      255       vehicle      7          True   \n",
-      "31                 train  31       16       vehicle      7          True   \n",
-      "32            motorcycle  32       17       vehicle      7          True   \n",
-      "33               bicycle  33       18       vehicle      7          True   \n",
-      "34         license plate  -1       -1       vehicle      7         False   \n",
-      "\n",
-      "    ignoreInEval  colorR  colorG  colorB  \n",
-      "0           True       0       0       0  \n",
-      "1           True       0       0       0  \n",
-      "2           True       0       0       0  \n",
-      "3           True       0       0       0  \n",
-      "4           True       0       0       0  \n",
-      "5           True     111      74       0  \n",
-      "6           True      81       0      81  \n",
-      "7          False     128      64     128  \n",
-      "8          False     244      35     232  \n",
-      "9           True     250     170     160  \n",
-      "10          True     230     150     140  \n",
-      "11         False      70      70      70  \n",
-      "12         False     102     102     156  \n",
-      "13         False     190     153     153  \n",
-      "14          True     180     165     180  \n",
-      "15          True     150     100     100  \n",
-      "16          True     150     120      90  \n",
-      "17         False     153     153     153  \n",
-      "18          True     153     153     153  \n",
-      "19         False     250     170      30  \n",
-      "20         False     220     220       0  \n",
-      "21         False     107     142      35  \n",
-      "22         False     152     251     152  \n",
-      "23         False      70     130     180  \n",
-      "24         False     220      20      60  \n",
-      "25         False     255       0       0  \n",
-      "26         False       0       0     142  \n",
-      "27         False       0       0      70  \n",
-      "28         False       0      60     100  \n",
-      "29          True       0       0      90  \n",
-      "30          True       0       0     110  \n",
-      "31         False       0      80     100  \n",
-      "32         False       0       0     230  \n",
-      "33         False     119      11      32  \n",
-      "34          True       0       0     142  \n"
+      "(35, 10)\n"
      ]
     }
    ],
    "source": [
     "print(labelscsv.shape)\n",
-    "print(labelscsv)"
+    "#print(labelscsv)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "dictlabel = {}\n",
-    "for i in range(labelscsv.shape[0]):\n",
-    "    val=np.ones(labelscsv.shape[1]-1)\n",
-    "    for j in range(labelscsv.shape[1]-1):\n",
-    "        val[j]=labelscsv.iloc[i][j+1]\n",
-    "    val1=torch.from_numpy(val)\n",
-    "    dictlabel[labelscsv.iloc[i][0]] = val1\n",
-    "dictlabel.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def labeltransform(input):\n",
-    "    target=torch.IntTensor(2048, 1024).zero_()\n",
-    "    for i in range(2048):\n",
-    "        for j in range(1024):\n",
-    "            target[i][j]=255\n",
-    "            for k in range(labelscsv.shape[1])\n",
-    "    \n",
-    "    return(torch.Tensor.float(dictlabel[datatrain.classes[input]]))"
+    "#def labeltransform(img):\n",
+    "#    input=transforms.ToTensor()(img)\n",
+    "#    target=torch.IntTensor(1024, 2048).zero_()\n",
+    "#    for i in range(1024):\n",
+    "#        for j in range(2048):\n",
+    "#            target[i][j]=255\n",
+    "#            for k in range(labelscsv.shape[0]):\n",
+    "#                if (labelscsv.iloc[k][2]<200 and labelscsv.iloc[k][7]/255==input[0][i][j] and labelscsv.iloc[k][8]/255==input[1][i][j] and labelscsv.iloc[k][9]/255==input[2][i][j]):\n",
+    "#                    target[i][j]=labelscsv.iloc[k][2]\n",
+    "#    return(target)"
    ]
   },
   {
@@ -262,36 +177,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#transform = transforms.Compose(\n",
-    "#    [transforms.Scale(256),\n",
-    "#     transforms.CenterCrop(224),     \n",
-    "#     transforms.ToTensor(),\n",
-    "#     transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225))])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#transform = transforms.Compose(\n",
+    "transform = transforms.Compose(\n",
     "#    [transforms.Scale(256),\n",
-    "#     transforms.CenterCrop(224),     \n",
-    "#     transforms.ToTensor(),\n",
+    "#     [transforms.CenterCrop(224),     \n",
+    "     [transforms.ToTensor()])\n",
     "#     transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225))])\n",
-    "datatrain = MyImageFolder(root1='../Downloads/leftImg8bit/train', root2='../Downloads/gtFine/train' , transform = None , target_transform= labeltransform)\n",
-    "#datatrainlabel = MyImageFolder(root='../Downloads/gtFine/train', transform = None , target_transform= None)\n",
     "\n",
-    "\n",
-    "#datavalidation = ImageFolder(root='/local/zhu/Stage Yue code/exp2/validation10', transform=transform, target_transform=labeltransformvalidation)\n",
-    "#datatest = ImageFolder(root='/local/zhu/Stage Yue code/exp2/test', transform=transform, target_transform=labeltransformtest)"
+    "targettransform = transforms.Compose(\n",
+    "#    [transforms.Scale(256),\n",
+    "#     [transforms.CenterCrop(224),  \n",
+    "     [transforms.ToTensor(),\n",
+    "     transforms.Normalize((0, 0, 0), (1/255, 1/255, 1/255))])\n",
+    "datatrain = MyImageFolder(root1='../Downloads/leftImg8bit/val', root2='../Downloads/gtFine/val' , transform = transform , target_transform= targettransform)\n"
    ]
   },
   {
@@ -303,22 +204,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<PIL.Image.Image image mode=RGB size=2048x1024 at 0x7F66417E1FD0>\n",
-      "<PIL.Image.Image image mode=RGB size=2048x1024 at 0x7F66417AD588>\n"
+      "\n",
+      "( 0  ,.,.) = \n",
+      "  0.3216  0.3255  0.3294  ...   0.3843  0.4157  0.3922\n",
+      "  0.6941  0.6784  0.6627  ...   0.3843  0.4196  0.3922\n",
+      "  0.6275  0.6196  0.6078  ...   0.3843  0.4235  0.3922\n",
+      "           ...             ⋱             ...          \n",
+      "  0.3333  0.3451  0.3608  ...   0.3294  0.3294  0.3255\n",
+      "  0.3333  0.3451  0.3608  ...   0.1020  0.3176  0.3176\n",
+      "  0.3333  0.3451  0.3569  ...   0.1020  0.0980  0.0941\n",
+      "\n",
+      "( 1  ,.,.) = \n",
+      "  0.3804  0.3843  0.3882  ...   0.5255  0.4902  0.2275\n",
+      "  0.7137  0.7020  0.6863  ...   0.5216  0.4902  0.2314\n",
+      "  0.6588  0.6471  0.6392  ...   0.5176  0.4902  0.2392\n",
+      "           ...             ⋱             ...          \n",
+      "  0.4039  0.4078  0.4196  ...   0.3961  0.3961  0.3961\n",
+      "  0.4039  0.4078  0.4196  ...   0.1216  0.3843  0.3843\n",
+      "  0.4039  0.4078  0.4196  ...   0.1255  0.1216  0.1176\n",
+      "\n",
+      "( 2  ,.,.) = \n",
+      "  0.2314  0.2353  0.2431  ...   0.4196  0.3804  0.0000\n",
+      "  0.5804  0.5647  0.5529  ...   0.4157  0.3804  0.0000\n",
+      "  0.4745  0.4667  0.4627  ...   0.4118  0.3804  0.0078\n",
+      "           ...             ⋱             ...          \n",
+      "  0.3725  0.3725  0.3843  ...   0.3569  0.3569  0.3569\n",
+      "  0.3725  0.3725  0.3843  ...   0.1098  0.3451  0.3451\n",
+      "  0.3725  0.3765  0.3843  ...   0.1176  0.1137  0.1098\n",
+      "[torch.FloatTensor of size 3x1024x2048]\n",
+      "\n",
+      "\n",
+      "    3     3     3  ...      3     3     3\n",
+      "    3     3     3  ...      3     3     3\n",
+      "    3     3     3  ...      3     3     3\n",
+      "       ...          ⋱          ...       \n",
+      "    3     3     3  ...      3     3     3\n",
+      "    3     3     3  ...      3     3     3\n",
+      "    3     3     3  ...      3     3     3\n",
+      "[torch.FloatTensor of size 1024x2048]\n",
+      "\n",
+      "255.0\n"
      ]
     }
    ],
    "source": [
     "x,y=datatrain[0]\n",
     "print(x)\n",
-    "print(y)"
+    "print(y)\n",
+    "print(y.max())"
    ]
   },
   {
