--- a/DL4CV_project.ipynb
+++ b/DL4CV_project.ipynb
@@ -76,13 +76,7 @@
     "import os\n",
     "from PIL import Image\n",
     "from torch.utils.data import Dataset\n",
-    "from MyFolder import MyImageFolder\n",
-    "#from cityscapesScripts.cityscapesscripts.helpers import labels\n",
-    "#from cityscapesScripts.cityscapesscripts.viewer.cityscapesViewer import CityscapesViewer\n",
-    "#from cityscapesScripts.cityscapesscripts.preparation.createTrainIdLabelImgs import \n",
-    "#from cityscapesScripts.cityscapesscripts.\n",
-    "#from cityscapesScripts.cityscapesscripts.\n",
-    "#from cityscapesScripts.cityscapesscripts."
+    "from MyFolder import MyImageFolder"
    ]
   },
   {
@@ -177,8 +171,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "transform = transforms.Compose(\n",
@@ -192,7 +188,9 @@
     "#     [transforms.CenterCrop(224),  \n",
     "     [transforms.ToTensor(),\n",
     "     transforms.Normalize((0, 0, 0), (1/255, 1/255, 1/255))])\n",
-    "datatrain = MyImageFolder(root1='../Downloads/leftImg8bit/val', root2='../Downloads/gtFine/val' , transform = transform , target_transform= targettransform)\n"
+    "datatrain = MyImageFolder(root1='../Downloads/leftImg8bit/train', root2='../Downloads/gtFine/train' , transform = transform , target_transform= targettransform)\n",
+    "dataval = MyImageFolder(root1='../Downloads/leftImg8bit/val', root2='../Downloads/gtFine/val' , transform = transform , target_transform= targettransform)\n",
+    "datatest = MyImageFolder(root1='../Downloads/leftImg8bit/test', root2='../Downloads/gtFine/test' , transform = transform , target_transform= targettransform)\n"
    ]
   },
   {
@@ -204,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -213,31 +211,31 @@
      "text": [
       "\n",
       "( 0  ,.,.) = \n",
-      "  0.3216  0.3255  0.3294  ...   0.3843  0.4157  0.3922\n",
-      "  0.6941  0.6784  0.6627  ...   0.3843  0.4196  0.3922\n",
-      "  0.6275  0.6196  0.6078  ...   0.3843  0.4235  0.3922\n",
+      "  0.6745  0.6824  0.6902  ...   0.1294  0.1294  0.1294\n",
+      "  0.6745  0.6784  0.6824  ...   0.1333  0.1294  0.1294\n",
+      "  0.6784  0.6824  0.6784  ...   0.1294  0.1294  0.1294\n",
       "           ...             ⋱             ...          \n",
-      "  0.3333  0.3451  0.3608  ...   0.3294  0.3294  0.3255\n",
-      "  0.3333  0.3451  0.3608  ...   0.1020  0.3176  0.3176\n",
-      "  0.3333  0.3451  0.3569  ...   0.1020  0.0980  0.0941\n",
+      "  0.3255  0.3216  0.3216  ...   0.2157  0.2078  0.2078\n",
+      "  0.3255  0.3216  0.3216  ...   0.2196  0.2157  0.2078\n",
+      "  0.3255  0.3216  0.3216  ...   0.2118  0.2157  0.2157\n",
       "\n",
       "( 1  ,.,.) = \n",
-      "  0.3804  0.3843  0.3882  ...   0.5255  0.4902  0.2275\n",
-      "  0.7137  0.7020  0.6863  ...   0.5216  0.4902  0.2314\n",
-      "  0.6588  0.6471  0.6392  ...   0.5176  0.4902  0.2392\n",
+      "  0.8078  0.8118  0.8157  ...   0.1725  0.1725  0.1725\n",
+      "  0.8000  0.8078  0.8118  ...   0.1765  0.1765  0.1765\n",
+      "  0.8000  0.8039  0.8078  ...   0.1765  0.1765  0.1765\n",
       "           ...             ⋱             ...          \n",
-      "  0.4039  0.4078  0.4196  ...   0.3961  0.3961  0.3961\n",
-      "  0.4039  0.4078  0.4196  ...   0.1216  0.3843  0.3843\n",
-      "  0.4039  0.4078  0.4196  ...   0.1255  0.1216  0.1176\n",
+      "  0.3882  0.3843  0.3843  ...   0.2745  0.2706  0.2667\n",
+      "  0.3882  0.3843  0.3843  ...   0.2824  0.2784  0.2706\n",
+      "  0.3882  0.3843  0.3843  ...   0.2784  0.2784  0.2745\n",
       "\n",
       "( 2  ,.,.) = \n",
-      "  0.2314  0.2353  0.2431  ...   0.4196  0.3804  0.0000\n",
-      "  0.5804  0.5647  0.5529  ...   0.4157  0.3804  0.0000\n",
-      "  0.4745  0.4667  0.4627  ...   0.4118  0.3804  0.0078\n",
+      "  0.7882  0.7882  0.7961  ...   0.1294  0.1294  0.1294\n",
+      "  0.7804  0.7882  0.7961  ...   0.1373  0.1333  0.1333\n",
+      "  0.7804  0.7843  0.7922  ...   0.1373  0.1373  0.1333\n",
       "           ...             ⋱             ...          \n",
-      "  0.3725  0.3725  0.3843  ...   0.3569  0.3569  0.3569\n",
-      "  0.3725  0.3725  0.3843  ...   0.1098  0.3451  0.3451\n",
-      "  0.3725  0.3765  0.3843  ...   0.1176  0.1137  0.1098\n",
+      "  0.3216  0.3176  0.3216  ...   0.2431  0.2392  0.2353\n",
+      "  0.3216  0.3176  0.3216  ...   0.2510  0.2431  0.2353\n",
+      "  0.3216  0.3176  0.3216  ...   0.2510  0.2510  0.2471\n",
       "[torch.FloatTensor of size 3x1024x2048]\n",
       "\n",
       "\n",
@@ -270,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -284,18 +282,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def FinalResult(input,seuil):\n",
-    "    return (input>seuil).float()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -304,24 +290,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "numlabels=labelscsv.shape[1]-1\n",
     "nbtrain=len(datatrain)\n",
-    "nbvalidation=len(datavalidation)\n",
+    "nbval=len(dataval)\n",
     "nbtest=len(datatest)\n",
     "basicexpansion=1  #resnet18, 34\n",
     "bottleneckexpansion=4   #resnet50,101,152\n",
-    "weightpath = \"/local/zhu/Stage Yue code/exp3/exp3-weight18.pth\"#testweight.pth\"\n",
-    "batchsize = 100\n",
-    "useGPU = True\n",
-    "seuil=torch.Tensor(numlabels)\n",
-    "for i in range(numlabels):\n",
-    "    seuil[i]=0.5"
+    "weightpath = \"../Downloads/dlcv_weight18.pth\"#testweight.pth\"\n",
+    "batchsize = 1\n",
+    "useGPU = False"
    ]
   },
   {
@@ -339,8 +321,7 @@
    },
    "outputs": [],
    "source": [
-    "net=Weldon.resnet18_weldon(4, pretrained=True)\n",
-    "#net=models.resnet18(pretrained=True)#, num_classes=4)#18,34,50,101,152\n",
+    "pretrained_net=models.resnet18(pretrained=True)#, num_classes=4)#18,34,50,101,152\n",
     "#net.fc = nn.Linear(512 * basicexpansion, numlabels)#bottleneckexpansion\n",
     "if useGPU:\n",
     "    net.cuda()"
