--- a/DL4CV_project.ipynb
+++ b/DL4CV_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -34,20 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'3.6.3 |Anaconda, Inc.| (default, Oct 13 2017, 12:02:49) \\n[GCC 7.2.0]'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.version"
@@ -55,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -75,7 +64,7 @@
     "import random\n",
     "import os\n",
     "from PIL import Image\n",
-    "from torch.utils.data import Dataset\n",
+    "from torch.utils.data import Dataset, sampler\n",
     "from MyFolder import MyImageFolder"
    ]
   },
@@ -106,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -117,25 +106,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(35, 10)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(labelscsv.shape)\n",
-    "#print(labelscsv)"
+    "print(labelscsv)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -171,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -202,61 +183,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "( 0  ,.,.) = \n",
-      "  0.6745  0.6824  0.6902  ...   0.1294  0.1294  0.1294\n",
-      "  0.6745  0.6784  0.6824  ...   0.1333  0.1294  0.1294\n",
-      "  0.6784  0.6824  0.6784  ...   0.1294  0.1294  0.1294\n",
-      "           ...             ⋱             ...          \n",
-      "  0.3255  0.3216  0.3216  ...   0.2157  0.2078  0.2078\n",
-      "  0.3255  0.3216  0.3216  ...   0.2196  0.2157  0.2078\n",
-      "  0.3255  0.3216  0.3216  ...   0.2118  0.2157  0.2157\n",
-      "\n",
-      "( 1  ,.,.) = \n",
-      "  0.8078  0.8118  0.8157  ...   0.1725  0.1725  0.1725\n",
-      "  0.8000  0.8078  0.8118  ...   0.1765  0.1765  0.1765\n",
-      "  0.8000  0.8039  0.8078  ...   0.1765  0.1765  0.1765\n",
-      "           ...             ⋱             ...          \n",
-      "  0.3882  0.3843  0.3843  ...   0.2745  0.2706  0.2667\n",
-      "  0.3882  0.3843  0.3843  ...   0.2824  0.2784  0.2706\n",
-      "  0.3882  0.3843  0.3843  ...   0.2784  0.2784  0.2745\n",
-      "\n",
-      "( 2  ,.,.) = \n",
-      "  0.7882  0.7882  0.7961  ...   0.1294  0.1294  0.1294\n",
-      "  0.7804  0.7882  0.7961  ...   0.1373  0.1333  0.1333\n",
-      "  0.7804  0.7843  0.7922  ...   0.1373  0.1373  0.1333\n",
-      "           ...             ⋱             ...          \n",
-      "  0.3216  0.3176  0.3216  ...   0.2431  0.2392  0.2353\n",
-      "  0.3216  0.3176  0.3216  ...   0.2510  0.2431  0.2353\n",
-      "  0.3216  0.3176  0.3216  ...   0.2510  0.2510  0.2471\n",
-      "[torch.FloatTensor of size 3x1024x2048]\n",
-      "\n",
-      "\n",
-      "    3     3     3  ...      3     3     3\n",
-      "    3     3     3  ...      3     3     3\n",
-      "    3     3     3  ...      3     3     3\n",
-      "       ...          ⋱          ...       \n",
-      "    3     3     3  ...      3     3     3\n",
-      "    3     3     3  ...      3     3     3\n",
-      "    3     3     3  ...      3     3     3\n",
-      "[torch.FloatTensor of size 1024x2048]\n",
-      "\n",
-      "255.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x,y=datatrain[0]\n",
     "print(x)\n",
-    "print(y)\n",
-    "print(y.max())"
+    "print(y)"
    ]
   },
   {
@@ -268,12 +201,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "from Mynet import PretrainedResNet50, MyNet\n",
     "import torch.nn.functional as F\n",
     "from torch.utils.data import DataLoader\n",
     "import torch.optim as optim\n",
@@ -290,18 +224,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "num_classes = labelscsv.shape[0]-1\n",
     "nbtrain=len(datatrain)\n",
     "nbval=len(dataval)\n",
     "nbtest=len(datatest)\n",
-    "basicexpansion=1  #resnet18, 34\n",
-    "bottleneckexpansion=4   #resnet50,101,152\n",
-    "weightpath = \"../Downloads/dlcv_weight18.pth\"#testweight.pth\"\n",
+    "weightpath = \"../Downloads/dlcv_weight50.pth\"#testweight.pth\"\n",
     "batchsize = 1\n",
     "useGPU = False"
    ]
@@ -321,8 +254,9 @@
    },
    "outputs": [],
    "source": [
-    "pretrained_net=models.resnet18(pretrained=True)#, num_classes=4)#18,34,50,101,152\n",
-    "#net.fc = nn.Linear(512 * basicexpansion, numlabels)#bottleneckexpansion\n",
+    "pretrained_net = PretrainedResNet50()\n",
+    "pretrained_net.load_state_dict(models.resnet50(pretrained=True).state_dict())\n",
+    "net = MyNet(num_classes, pretrained_net)\n",
     "if useGPU:\n",
     "    net.cuda()"
    ]
@@ -335,11 +269,13 @@
    },
    "outputs": [],
    "source": [
-    "criterion = nn.MultiLabelSoftMarginLoss()\n",
+    "criterion = torch.nn.CrossEntropyLoss(ignore_index=-1)\n",
+    "if useGPU:\n",
+    "    criterion.cuda()\n",
     "optimizer = optim.SGD(net.parameters(), lr=0.01, momentum=0.9)\n",
     "\n",
-    "trainloader = DataLoader(datatrain, batch_size=batchsize, sampler=Sampler.RandomSampler(datatrain))\n",
-    "validationloader = DataLoader(datavalidation, batch_size=batchsize)\n",
+    "trainloader = DataLoader(datatrain, batch_size=batchsize, sampler=sampler.RandomSampler(datatrain))\n",
+    "valloader = DataLoader(dataval, batch_size=batchsize)\n",
     "testloader = DataLoader(datatest, batch_size=batchsize)"
    ]
   },
@@ -373,16 +309,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "traingraph=[]\n",
-    "testgraph=[]\n",
-    "ConMatTrain=[]\n",
-    "ConMatValidation=[]\n",
-    "ConMatTest=[]"
+    "print(\"Start training\")\n",
+    "\n",
+    "for epoch in range(1):  # loop over the dataset multiple times\n",
+    "       \n",
+    "    #--------------------------------------training period---------------------------------------\n",
+    "    running_loss = 0.0\n",
+    "    epochloss = 0.0\n",
+    "    numsample=0\n",
+    "    printfrequence=10\n",
+    "    \n",
+    "    net.train()\n",
+    "    for inputs, labels in trainloader:\n",
+    "        if useGPU:\n",
+    "            inputs = inputs.cuda()\n",
+    "            labels = labels.cuda()\n",
+    "        inputs, labels = Variable(inputs), Variable(labels)\n",
+    "   \n",
+    "        # zero the parameter gradients\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        # forward + backward + optimize\n",
+    "        outputs = net(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        # print statistics\n",
+    "        running_loss += loss.data[0]\n",
+    "        epochloss+=loss.data[0]\n",
+    "        numsample += batchsize\n",
+    "        if numsample % printfrequence == 0: #printfrequence-1: \n",
+    "            print('[%d, %5d] loss: %.5f' % (epoch+1, numsample, running_loss / printfrequence))\n",
+    "            running_loss = 0.0\n",
+    "    print('The average loss of epoch ', epoch+1, ' is ', epochloss/nbtrain)\n",
+    "    torch.save(net.state_dict(),weightpath)"
    ]
   },
   {
@@ -392,8 +356,53 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "print(\"The first threshold is defined at \", seuil)\n",
+    "print(\"Start training\")\n",
     "newseuil=torch.Tensor(numlabels)\n",
     "\n",
     "ConfusionMatrixTrain=[torch.Tensor() for i in range(numlabels)]\n",
