overfitting after 14 epochs of training

--- a/DL4CV_project.ipynb
+++ b/DL4CV_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -34,9 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3.6.3 |Anaconda, Inc.| (default, Oct 13 2017, 12:02:49) \\n[GCC 7.2.0]'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.version"
@@ -44,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -95,20 +106,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "labelscsv = pd.read_csv(\"../Downloads/labels.csv\")"
+    "labelscsv = pd.read_csv(\"labels.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(35, 10)\n",
+      "                    name  id  trainId      category  catId  hasInstances  \\\n",
+      "0              unlabeled   0      255          void      0         False   \n",
+      "1            ego vehicle   1      255          void      0         False   \n",
+      "2   rectification border   2      255          void      0         False   \n",
+      "3             out of roi   3      255          void      0         False   \n",
+      "4                 static   4      255          void      0         False   \n",
+      "5                dynamic   5      255          void      0         False   \n",
+      "6                 ground   6      255          void      0         False   \n",
+      "7                   road   7        0          flat      1         False   \n",
+      "8               sidewalk   8        1          flat      1         False   \n",
+      "9                parking   9      255          flat      1         False   \n",
+      "10            rail track  10      255          flat      1         False   \n",
+      "11              building  11        2  construction      2         False   \n",
+      "12                  wall  12        3  construction      2         False   \n",
+      "13                 fence  13        4  construction      2         False   \n",
+      "14            guard rail  14      255  construction      2         False   \n",
+      "15                bridge  15      255  construction      2         False   \n",
+      "16                tunnel  16      255  construction      2         False   \n",
+      "17                  pole  17        5        object      3         False   \n",
+      "18             polegroup  18      255        object      3         False   \n",
+      "19         traffic light  19        6        object      3         False   \n",
+      "20          traffic sign  20        7        object      3         False   \n",
+      "21            vegetation  21        8        nature      4         False   \n",
+      "22               terrain  22        9        nature      4         False   \n",
+      "23                   sky  23       10           sky      5         False   \n",
+      "24                person  24       11         human      6          True   \n",
+      "25                 rider  25       12         human      6          True   \n",
+      "26                   car  26       13       vehicle      7          True   \n",
+      "27                 truck  27       14       vehicle      7          True   \n",
+      "28                   bus  28       15       vehicle      7          True   \n",
+      "29               caravan  29      255       vehicle      7          True   \n",
+      "30               trailer  30      255       vehicle      7          True   \n",
+      "31                 train  31       16       vehicle      7          True   \n",
+      "32            motorcycle  32       17       vehicle      7          True   \n",
+      "33               bicycle  33       18       vehicle      7          True   \n",
+      "34         license plate  -1       -1       vehicle      7         False   \n",
+      "\n",
+      "    ignoreInEval  colorR  colorG  colorB  \n",
+      "0           True       0       0       0  \n",
+      "1           True       0       0       0  \n",
+      "2           True       0       0       0  \n",
+      "3           True       0       0       0  \n",
+      "4           True       0       0       0  \n",
+      "5           True     111      74       0  \n",
+      "6           True      81       0      81  \n",
+      "7          False     128      64     128  \n",
+      "8          False     244      35     232  \n",
+      "9           True     250     170     160  \n",
+      "10          True     230     150     140  \n",
+      "11         False      70      70      70  \n",
+      "12         False     102     102     156  \n",
+      "13         False     190     153     153  \n",
+      "14          True     180     165     180  \n",
+      "15          True     150     100     100  \n",
+      "16          True     150     120      90  \n",
+      "17         False     153     153     153  \n",
+      "18          True     153     153     153  \n",
+      "19         False     250     170      30  \n",
+      "20         False     220     220       0  \n",
+      "21         False     107     142      35  \n",
+      "22         False     152     251     152  \n",
+      "23         False      70     130     180  \n",
+      "24         False     220      20      60  \n",
+      "25         False     255       0       0  \n",
+      "26         False       0       0     142  \n",
+      "27         False       0       0      70  \n",
+      "28         False       0      60     100  \n",
+      "29          True       0       0      90  \n",
+      "30          True       0       0     110  \n",
+      "31         False       0      80     100  \n",
+      "32         False       0       0     230  \n",
+      "33         False     119      11      32  \n",
+      "34          True       0       0     142  \n"
+     ]
+    }
+   ],
    "source": [
     "print(labelscsv.shape)\n",
     "print(labelscsv)"
@@ -116,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -152,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -169,9 +259,12 @@
     "#     [transforms.CenterCrop(224),  \n",
     "     [transforms.ToTensor(),\n",
     "     transforms.Normalize((0, 0, 0), (1/255, 1/255, 1/255))])\n",
-    "datatrain = MyImageFolder(root1='../Downloads/leftImg8bit/train', root2='../Downloads/gtFine/train' , transform = transform , target_transform= targettransform)\n",
-    "dataval = MyImageFolder(root1='../Downloads/leftImg8bit/val', root2='../Downloads/gtFine/val' , transform = transform , target_transform= targettransform)\n",
-    "datatest = MyImageFolder(root1='../Downloads/leftImg8bit/test', root2='../Downloads/gtFine/test' , transform = transform , target_transform= targettransform)\n"
+    "root = '../'\n",
+    "li8b = 'leftImg8bit_trainvaltest_samples/leftImg8bit/'\n",
+    "gt = 'gtFine_trainvaltest_samples/gtFine/'\n",
+    "datatrain = MyImageFolder(root1=root+li8b+'train', root2=root+gt+'train' , transform = transform , target_transform= targettransform)\n",
+    "dataval = MyImageFolder(root1=root+li8b+'val', root2=root+gt+'val' , transform = transform , target_transform= targettransform)\n",
+    "datatest = MyImageFolder(root1=root+li8b+'test', root2=root+gt+'test' , transform = transform , target_transform= targettransform)\n"
    ]
   },
   {
@@ -183,9 +276,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "( 0  ,.,.) = \n",
+      "  0.6745  0.6824  0.6902  ...   0.1294  0.1294  0.1294\n",
+      "  0.6745  0.6784  0.6824  ...   0.1333  0.1294  0.1294\n",
+      "  0.6784  0.6824  0.6784  ...   0.1294  0.1294  0.1294\n",
+      "           ...             ⋱             ...          \n",
+      "  0.3255  0.3216  0.3216  ...   0.2157  0.2078  0.2078\n",
+      "  0.3255  0.3216  0.3216  ...   0.2196  0.2157  0.2078\n",
+      "  0.3255  0.3216  0.3216  ...   0.2118  0.2157  0.2157\n",
+      "\n",
+      "( 1  ,.,.) = \n",
+      "  0.8078  0.8118  0.8157  ...   0.1725  0.1725  0.1725\n",
+      "  0.8000  0.8078  0.8118  ...   0.1765  0.1765  0.1765\n",
+      "  0.8000  0.8039  0.8078  ...   0.1765  0.1765  0.1765\n",
+      "           ...             ⋱             ...          \n",
+      "  0.3882  0.3843  0.3843  ...   0.2745  0.2706  0.2667\n",
+      "  0.3882  0.3843  0.3843  ...   0.2824  0.2784  0.2706\n",
+      "  0.3882  0.3843  0.3843  ...   0.2784  0.2784  0.2745\n",
+      "\n",
+      "( 2  ,.,.) = \n",
+      "  0.7882  0.7882  0.7961  ...   0.1294  0.1294  0.1294\n",
+      "  0.7804  0.7882  0.7961  ...   0.1373  0.1333  0.1333\n",
+      "  0.7804  0.7843  0.7922  ...   0.1373  0.1373  0.1333\n",
+      "           ...             ⋱             ...          \n",
+      "  0.3216  0.3176  0.3216  ...   0.2431  0.2392  0.2353\n",
+      "  0.3216  0.3176  0.3216  ...   0.2510  0.2431  0.2353\n",
+      "  0.3216  0.3176  0.3216  ...   0.2510  0.2510  0.2471\n",
+      "[torch.FloatTensor of size 3x1024x2048]\n",
+      "\n",
+      "\n",
+      "    3     3     3  ...      3     3     3\n",
+      "    3     3     3  ...      3     3     3\n",
+      "    3     3     3  ...      3     3     3\n",
+      "       ...          ⋱          ...       \n",
+      "    3     3     3  ...      3     3     3\n",
+      "    3     3     3  ...      3     3     3\n",
+      "    3     3     3  ...      3     3     3\n",
+      "[torch.LongTensor of size 1024x2048]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "x,y=datatrain[0]\n",
     "print(x)\n",
@@ -201,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -224,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -234,21 +373,24 @@
     "nbtrain=len(datatrain)\n",
     "nbval=len(dataval)\n",
     "nbtest=len(datatest)\n",
-    "weightpath = \"../Downloads/dlcv_weight50.pth\"#testweight.pth\"\n",
+    "\n",
+    "weightpath = \"dlcv_weight50.pth\"\n",
+    "# where the weights are saved in the end, for further reuse\n",
+    "\n",
     "batchsize = 1\n",
-    "useGPU = False"
+    "useGPU = torch.cuda.is_available()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We take a pretrained Resnet18"
+    "We take a pretrained Resnet50"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -263,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -288,15 +430,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded weights at:dlcv_weight50.pth\n"
+     ]
+    }
+   ],
    "source": [
     "import os.path\n",
     "if os.path.exists(weightpath):\n",
-    "    net.load_state_dict(torch.load(weightpath))"
+    "    net.load_state_dict(torch.load(weightpath))\n",
+    "    print(\"Loaded weights at:\"+weightpath)\n",
+    "else:\n",
+    "    print(\"No pretrained weights found at:\"+weightpath)"
    ]
   },
   {
@@ -308,19 +459,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start training\n",
+      "[13,    20] loss: 0.10611\n",
+      "[13,    40] loss: 0.11805\n",
+      "[13,    60] loss: 0.09876\n",
+      "[13,    80] loss: 0.10293\n",
+      "[13,   100] loss: 0.10159\n",
+      "[13,   120] loss: 0.10262\n",
+      "[13,   140] loss: 0.10507\n",
+      "The average loss of epoch  13  is  0.10546286608258339\n",
+      "[14,    20] loss: 0.09314\n",
+      "[14,    40] loss: 0.09473\n",
+      "[14,    60] loss: 0.11674\n",
+      "[14,    80] loss: 0.10220\n",
+      "[14,   100] loss: 0.10894\n",
+      "[14,   120] loss: 0.09861\n",
+      "[14,   140] loss: 0.09342\n",
+      "The average loss of epoch  14  is  0.10078627283187354\n",
+      "End training\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Start training\")\n",
     "\n",
-    "for epoch in range(1):  # loop over the dataset multiple times\n",
-    "       \n",
+    "needNewEpoch= True\n",
+    "lastLoss=10\n",
+    "newTrainLoss=0\n",
+    "epoch=12\n",
+    "\n",
+    "#for epoch in range(10):  # loop over the dataset multiple times\n",
+    "while needNewEpoch:       \n",
     "    #--------------------------------------training period---------------------------------------\n",
     "    running_loss = 0.0\n",
     "    epochloss = 0.0\n",
     "    numsample=0\n",
-    "    printfrequence=10\n",
+    "    printfrequence=20\n",
     "    \n",
     "    net.train()\n",
     "    for inputs, labels in trainloader:\n",
@@ -345,18 +526,89 @@
     "        if numsample % printfrequence == 0: #printfrequence-1: \n",
     "            print('[%d, %5d] loss: %.5f' % (epoch+1, numsample, running_loss / printfrequence))\n",
     "            running_loss = 0.0\n",
-    "    print('The average loss of epoch ', epoch+1, ' is ', epochloss/nbtrain)\n",
-    "    torch.save(net.state_dict(),weightpath)"
+    "    newTrainLoss = epochloss/nbtrain        \n",
+    "    print('The average loss of epoch ', epoch+1, ' is ', newTrainLoss)\n",
+    "    torch.save(net.state_dict(),weightpath)\n",
+    "    if lastLoss-newTrainLoss<0.005:\n",
+    "        needNewEpoch=False\n",
+    "    else:\n",
+    "        lastLoss=newTrainLoss \n",
+    "        epoch=epoch+1\n",
+    "\n",
+    "print(\"End training\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Memory Liberation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded weights at:dlcv_weight50.pth\n"
+     ]
+    }
+   ],
+   "source": [
+    "del net\n",
+    "del optimizer\n",
+    "\n",
+    "#reset_selective name_variable\n",
+    "net = MyNet(num_classes, pretrained_net)\n",
+    "if useGPU:\n",
+    "    net.cuda()\n",
+    "if os.path.exists(weightpath):\n",
+    "    net.load_state_dict(torch.load(weightpath))\n",
+    "    print(\"Loaded weights at:\"+weightpath)\n",
+    "    \n",
+    "optimizer = optim.SGD(net.parameters(), lr=0.01, momentum=0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average correctness of the validation data is  81.6193614264 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "meanCorrectProba = 0.0\n",
+    "numsample=0\n",
+    "printfrequence=20\n",
+    "    \n",
+    "net.eval()\n",
+    "for inputs, labels in trainloader:\n",
+    "    if useGPU:\n",
+    "        inputs = inputs.cuda()\n",
+    "        labels = labels.cuda()\n",
+    "    inputs, labels = Variable(inputs), Variable(labels)\n",
+    "    outputs=net(inputs)\n",
+    "    loss = criterion(outputs, labels)\n",
+    "    meanProbability=np.exp(-loss.data[0])\n",
+    "        \n",
+    "    # print statistics\n",
+    "    meanCorrectProba += meanProbability\n",
+    "    numsample += batchsize\n",
+    "#    if numsample % printfrequence == 0: #printfrequence-1: \n",
+    "#        print('[%d, %5d] loss: %.5f' % (epoch+1, numsample, running_loss / printfrequence))\n",
+    "#        running_loss = 0.0\n",
+    "print('The average correctness of the validation data is ', meanCorrectProba/nbtrain*100, '%')"
+   ]
   },
   {
    "cell_type": "code",
