--- a/DL4CV_project.ipynb
+++ b/DL4CV_project.ipynb
@@ -482,7 +482,7 @@
     "    NET.eval()\n",
     "    print (\"Slice width:  %.5d Number of Slices:  %.5d\" %(WIDTH, NUM_SLICES))   #added \n",
     "    \n",
-    "    for inputs, labels in valloader:\n",
+    "    for inputs, labels in VAL_LOADER:\n",
     "        labels_masked = reduce(labels.numpy(), ROAD_LABELS)\n",
     "        labels = torch.from_numpy(labels_masked)\n",
     "\n",
@@ -496,8 +496,8 @@
     "                labels_temp = labels_temp.cuda()    #changed    \n",
     "                \n",
     "            inputs_temp, labels_temp = Variable(inputs_temp), Variable(labels_temp) #changed\n",
-    "            outputs=net(inputs_temp)    #changed\n",
-    "            loss = criterion(outputs, labels_temp) #changed\n",
+    "            outputs=NET(inputs_temp)    #changed\n",
+    "            loss = CRITERION(outputs, labels_temp) #changed\n",
     "            meanProbability=np.exp(-loss.data[0])\n",
     "            epochloss += loss.data[0]\n",
     "            meanCorrectProba += meanProbability\n",
